--- a/options.html
+++ b/options.html
@@ -15,9 +15,6 @@
         <label for="apiKey">API Key:</label>
         <input type="text" id="apiKey" required>
 
-        <label for="prompt">Prompt:</label>
-        <textarea id="prompt" rows="10" required></textarea>
-
         <label for="model">Model (e.g., gpt-4, gpt-3.5-turbo):</label>
         <input type="text" id="model" required>
 
@@ -31,6 +28,12 @@
             <input type="checkbox" id="debug">
             Enable Debug Mode
         </label>
+
+        <label for="youtubePrompt">YouTube Prompt:</label>
+        <textarea id="youtubePrompt" rows="10" required></textarea>
+
+        <label for="textPrompt">Text Prompt:</label>
+        <textarea id="textPrompt" rows="10" required></textarea>
 
         <button type="submit">Save Settings</button>
     </form>
