--- a/summary.html
+++ b/summary.html
@@ -1,28 +1,50 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Summary</title>
+  <title id="pageTitle">Summary</title>
   <style>
-    body { font-family: Arial, sans-serif; line-height: 1.6; padding: 20px; max-height: 500px; overflow-y: auto; }
-    h2 { color: #2c3e50; margin-bottom: 20px; }
-    ul { padding-left: 20px; list-style-type: none; }
-    li { margin-bottom: 10px; }
-    li.level-1::before { content: "•"; color: #3498db; display: inline-block; width: 1em; margin-left: -1em; }
-    li.level-2::before { content: "◦"; color: #e74c3c; display: inline-block; width: 1em; margin-left: -1em; }
-    li.level-3::before { content: "▪"; color: #2ecc71; display: inline-block; width: 1em; margin-left: -1em; }
-    .level-2 { margin-left: 20px; }
-    .level-3 { margin-left: 40px; }
+    body {
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      padding: 20px;
+      max-width: 800px; /* Half the screen width for better readability */
+      margin: auto;
+    }
+    h1 {
+      font-size: 2em;
+      font-weight: bold;
+      margin-bottom: 0.5em;
+    }
+    h2 {
+      font-size: 1.5em;
+      font-weight: bold;
+      margin-bottom: 0.5em;
+    }
+    h3 {
+      font-size: 1.2em;
+      font-style: italic;
+      margin-bottom: 0.5em;
+    }
     strong { color: #34495e; }
     em { font-style: italic; }
     .red { color: #e74c3c; }
     .blue { color: #1e90ff; }
     .green { color: #2ecc71; }
     .orange { color: #f39c12; }
-    .footer { margin-top: 20px; font-size: 0.9em; color: #555; }
-    .footer a { color: #3498db; text-decoration: none; }
+    .footer {
+      margin-top: 20px;
+      font-size: 0.9em;
+      color: #555;
+    }
+    .footer a {
+      color: #3498db;
+      text-decoration: none;
+    }
   </style>
 </head>
 <body>
+  <h1 id="summaryTitle"></h1>
+  <div id="summaryInfo"></div>
   <div id="summaryContent">Loading summary...</div>
   <div class="footer">
     <p>Original page: <a id="pageUrl" href="#" target="_blank"></a></p>
