--- a/options.html
+++ b/options.html
@@ -15,7 +15,7 @@
         <label for="apiKey">API Key:</label>
         <input type="text" id="apiKey" required>
 
-        <label for="model">Model (e.g., gpt-4, gpt-3.5-turbo):</label>
+        <label for="model">Model (e.g., gpt-4o-mini, gpt-4o):</label>
         <input type="text" id="model" required>
 
         <label for="maxTokens">Max Tokens:</label>
