--- a/popup.html
+++ b/popup.html
@@ -2,12 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Summarise Text</title>
 </head>
 <body>
     <h1>Summarise Text</h1>
     <button id="summariseBtn">Summarise Page</button>
-    <script src="popup.js"></script>
+    <script type="module" src="popup.js"></script>
 </body>
 </html>
