--- a/summary.html
+++ b/summary.html
@@ -1,3 +1,4 @@
+<!-- summary.html -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -9,21 +10,22 @@
       padding: 20px;
       max-width: 800px;
       margin: auto;
+      font-size: 16px; /* Set base font size */
     }
     h1 {
-      font-size: 2em;
+      font-size: 24px; /* Fixed font size */
       font-weight: bold;
-      margin-bottom: 0.5em;
+      margin-bottom: 10px;
     }
     h2 {
-      font-size: 1.5em;
+      font-size: 20px; /* Fixed font size */
       font-weight: bold;
-      margin-bottom: 0.5em;
+      margin-bottom: 10px;
     }
     h3 {
-      font-size: 1.2em;
+      font-size: 18px; /* Fixed font size */
       font-style: italic;
-      margin-bottom: 0.5em;
+      margin-bottom: 10px;
     }
     strong { color: #34495e; }
     em { font-style: italic; }
@@ -33,7 +35,7 @@
     .orange { color: #f39c12; }
     .footer {
       margin-top: 20px;
-      font-size: 0.9em;
+      font-size: 14px; /* Fixed font size */
       color: #555;
     }
     .footer a {
@@ -51,6 +53,7 @@
     #ttsControls select, #ttsControls button, #ttsControls input[type="range"] {
       margin-right: 10px;
       margin-bottom: 10px;
+      font-size: 14px; /* Fixed font size */
     }
   </style>
 </head>
