--- a/popup.html
+++ b/popup.html
@@ -7,6 +7,7 @@
 <body>
     <h1>Summarise Text</h1>
     <button id="summariseBtn">Summarise Page</button>
+    <button id="downloadLogBtn" style="margin-left:10px;">Download Debug Log</button>
     <script type="module" src="popup.js"></script>
 </body>
 </html>
