--- a/popup.html
+++ b/popup.html
@@ -16,7 +16,7 @@
 <body>
     <h1>Summarise Text</h1>
     <button id="summariseBtn">Summarise Page</button>
-    <button id="blockSiteBtn">Block Site</button>
+    <button id="blockSiteBtn">Block Paywall</button>
     <script type="module" src="popup.js"></script>
 </body>
 </html>
