--- a/popup.html
+++ b/popup.html
@@ -17,6 +17,7 @@
     <h1>Summarise Text</h1>
     <button id="summariseBtn">Summarise Page</button>
     <button id="blockSiteBtn">Block Paywall</button>
+    <button id="optionsBtn">Open Settings</button>
     <script type="module" src="popup.js"></script>
 </body>
 </html>
