--- a/popup.html
+++ b/popup.html
@@ -58,6 +58,11 @@
              /* Initially hidden - JS controls display */
              /* display: none; - Handled by inline style */
         }
+        #copyContentBtn {
+            background-color: #17a2b8; /* Teal */
+             /* Initially hidden - JS controls display */
+             /* display: none; - Handled by inline style */
+        }
     </style>
 </head>
 <body>
@@ -65,6 +70,7 @@
     <div class="button-container">
         <button id="summariseBtn">📄 Summarise Page</button>
         <button id="copyTranscriptBtn" style="display: none;">📋 Copy Transcript</button>
+        <button id="copyContentBtn" style="display: none;">📋 Copy Content</button>
         <button id="blockSiteBtn">🚫 Block Paywall Site</button>
         <button id="optionsBtn">⚙️ Open Settings</button>
     </div>
