--- a/popup.html
+++ b/popup.html
@@ -63,6 +63,16 @@
              /* Initially hidden - JS controls display */
              /* display: none; - Handled by inline style */
         }
+        #sendToChatGPTBtn {
+            background-color: #10a37f; /* ChatGPT green */
+             /* Initially hidden - JS controls display */
+             /* display: none; - Handled by inline style */
+        }
+        #factCheckBtn {
+            background-color: #ff6b35; /* Orange for fact-checking */
+             /* Initially hidden - JS controls display */
+             /* display: none; - Handled by inline style */
+        }
     </style>
 </head>
 <body>
@@ -71,6 +81,8 @@
         <button id="summariseBtn">📄 Summarise Page</button>
         <button id="copyTranscriptBtn" style="display: none;">📋 Copy Transcript</button>
         <button id="copyContentBtn" style="display: none;">📋 Copy Content</button>
+        <button id="sendToChatGPTBtn" style="display: none;">💬 Send to ChatGPT</button>
+        <button id="factCheckBtn" style="display: none;">🔍 Fact Check</button>
         <button id="blockSiteBtn">🚫 Block Paywall Site</button>
         <button id="optionsBtn">⚙️ Open Settings</button>
     </div>
