--- a/options.html
+++ b/options.html
@@ -97,8 +97,8 @@
         <label for="apiKey">API Key:</label>
         <input type="text" id="apiKey" required>
 
-        <label for="model">Model (e.g., gpt-4o-mini, gpt-4o):</label>
-        <input type="text" id="model" required>
+        <label for="model">Model:</label>
+        <select id="model"></select>
 
         <label for="maxTokens">Max Tokens:</label>
         <input type="number" id="maxTokens" required>
