--- a/options.html
+++ b/options.html
@@ -118,6 +118,12 @@
         <label for="textPrompt">Text Prompt:</label>
         <textarea id="textPrompt" required></textarea>
 
+        <label for="prefacePrompt">Preface Prompt:</label>
+        <textarea id="prefacePrompt" required></textarea>
+
+        <label for="youtubePrefacePrompt">YouTube Preface Prompt:</label>
+        <textarea id="youtubePrefacePrompt" required></textarea>
+
         <h2>Default Speech Settings</h2>
         <label for="defaultVoice">Default Voice:</label>
         <select id="defaultVoice"></select>
