--- a/popup.html
+++ b/popup.html
@@ -58,6 +58,11 @@
              /* Initially hidden - JS controls display */
              /* display: none; - Handled by inline style */
         }
+        #readContentBtn {
+            background-color: #218838; /* Darker green for read article */
+             /* Initially hidden - JS controls display */
+             /* display: none; - Handled by inline style */
+        }
         #copyContentBtn {
             background-color: #17a2b8; /* Teal */
              /* Initially hidden - JS controls display */
@@ -80,6 +85,7 @@
     <div class="button-container">
         <button id="summariseBtn">📄 Summarise Page</button>
         <button id="copyTranscriptBtn" style="display: none;">📋 Copy Transcript</button>
+        <button id="readContentBtn" style="display: none;">🔊 Read Article</button>
         <button id="copyContentBtn" style="display: none;">📋 Copy Content</button>
         <button id="sendToChatGPTBtn" style="display: none;">💬 Send to ChatGPT</button>
         <button id="factCheckBtn" style="display: none;">🔍 Fact Check</button>
